--- a/src/app/components/create-article/create-article.component.html
+++ b/src/app/components/create-article/create-article.component.html
@@ -1,8 +1,13 @@
-<div class="container">
-    <div class="row input-group mb-3">
+<div class="container mb-3">
+    <div class="row input-group mb-3 ms-1">
         <span class="col-sm-1 input-group-text">Title</span>
         <input type="col-sm-11 text" class="form-control">
     </div>
 
-    <angular-editor [(ngModel)]="htmlContent" [config]="config"></angular-editor>
+    <angular-editor [(ngModel)]="htmlContent" [config]="config" class="row"></angular-editor>
+
+    <div class="row justify-content-end mt-4">
+        <button type="button" class="btn btn-primary col-lg-1">Publish</button>
+        <button type="button" class="btn btn-outline-secondary ms-3 col-lg-1">Discard</button>
+    </div>
 </div>
