Add Register and Login buttons to the header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
-    <div class="container-fluid">
-        <a class="navbar-brand " href="#">Article</a>
+    <a class="navbar-brand " href="#">Article</a>
+
+    <div class="container justify-content-end">
+        <button type="button" class="col-lg-1 btn btn-primary me-3">Register</button>
+        <button type="button" class="col-lg-1 btn btn-danger">Login</button>
     </div>
 </nav>
