--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<ul class="list-group">
+    <li *ngFor="let article of article_list" class="list-group-item">
+        <a href="/article/{{article.id}}"> {{ article.title }}</a>
+    </li>
+</ul>
