--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -5,6 +5,12 @@ a {
 
 img {
     border-radius: 50%;
-    width: 50%;
-    height: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+@media (max-width: 768px) {
+    form {
+        width: 100% !important;
+    }
 }
