--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,26 +1,36 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3">
     <a class="ms-3 navbar-brand " href="#">Article</a>
-
-    <button class="btn btn-outline-primary" type="button" id="button-addon1">
-        <span class="bi bi-search"></span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
-    <input type="text" class="form-control" placeholder="Search...">
 
-    <div *ngIf="this.authService.isLoggedOut()" class="container justify-content-end">
-        <a routerLink="/register" class="col-lg-1">
-            <button type="button" class="btn btn-primary me-3">Register</button>
-        </a>
-        <a routerLink="/login" class="col-lg-1">
-            <button type="button" class="btn btn-danger">Login</button>
-        </a>
-    </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form onsubmit="event.preventDefault()" class="w-50  mt-4 mb-4 container form-inline input-group">
+            <input class="form-control" type="text" placeholder="Search for an Article">
+            <button class="input-group-append btn btn-secondary" type="submit">
+                <span class="bi bi-search"></span>
+            </button>
+        </form>
 
-    <div *ngIf="this.authService.isLoggedIn()" class="container justify-content-end">
-        <a href="/publish" class="me-4 navbar-text">Create</a>
+        <ul class="navbar-nav mr-auto">
+            <div *ngIf="this.authService.isLoggedOut()" class="d-flex flex-row">
+                <a routerLink="/register" class="p-2 nav-item active">
+                    <button type="button" class="btn btn-primary ms-1">Register</button>
+                </a>
+                <a routerLink="/login" class="p-2 nav-item active">
+                    <button type="button" class="btn btn-danger">Login</button>
+                </a>
+            </div>
 
-        <a routerLink="/" class="col-lg-1">
-            <img class="col-lg-1"
-                src="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fs3.amazonaws.com%2Fappforest_uf%2Ff1512936020165x278911292087286720%2FA.png?w=&h=&auto=compress&dpr=1&fit=max">
-        </a>
+            <div *ngIf="this.authService.isLoggedIn()" class="d-flex">
+                <a routerLink="/publish" class="flex-column mt-1 me-3 nav-link">Publish</a>
+                <a routerLink="/" class="flex-column me-3">
+                    <img
+                        src="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fs3.amazonaws.com%2Fappforest_uf%2Ff1512936020165x278911292087286720%2FA.png?w=&h=&auto=compress&dpr=1&fit=max">
+                </a>
+            </div>
+
+        </ul>
     </div>
 </nav>
