--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,8 @@
-<div class="mt-5 w-25 p-4 container border border-3 rounded-3">
+<div class="mt-5 p-4 container border border-3 rounded-3 box">
+    <div class="mb-3">
+        <h1 class="d-flex text-success">REGISTER</h1>
+    </div>
+
     <div class="mb-3">
         <label class="form-label">First Name</label>
         <input [(ngModel)]="firstname" placeholder="First Name" type="text" class="form-control">
