--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,24 +1,30 @@
-@media (max-width: 2000px) {
-    .box {
-        width: 35% !important;
-    }
+.box {
+    width: 100% !important;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 80px;
+    background-color: rgb(243, 240, 240);
+    text-align: center;
 }
 
-@media (max-width: 800px) {
-    .box {
-        width: 50% !important;
-    }
+mat-form-field {
+    width: 75%;
 }
 
-@media (max-width: 576px) {
+@media (min-width: 384px) {
     .box {
         width: 75% !important;
     }
 }
 
-
-@media (max-width: 384px) {
+@media (min-width: 576px) {
     .box {
-        width: 100% !important;
+        width: 50% !important;
+    }
+}
+
+@media (min-width: 800px) {
+    .box {
+        width: 25% !important;
     }
 }
